--- a/Lab31Erik/Lab31Erik/Views/Accounts/AdminLogIn.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Accounts/AdminLogIn.cshtml
@@ -1,8 +1,9 @@
 ﻿@model Lab31Erik.Models.AdminLogInViewModel
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
+
 <h2>Admin Login Page</h2>
 <form method="post">
     <div asp-validation-summary="All"></div>
