--- a/Lab31Erik/Lab31Erik/Views/Home/Index.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-﻿<h1>Welcome To My Store Y'all!</h1>
+﻿@*<h1>Welcome To My Store Y'all!</h1>*@
 
+@{ 
+    Layout = "_Layout";
+}
 <ul>
     <li><a asp-controller="Products" asp-action="Index">Go to Products</a></li>
     <li><a asp-controller="Accounts" asp-action="Register">Register</a></li>
