--- a/Lab31Erik/Lab31Erik/Views/Accounts/AdminRegister.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Accounts/AdminRegister.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Lab31Erik.Models.AdminRegisterViewModel
 
+@{
+    Layout = "_Layout";
+}
+
 <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
 
     <div asp-validation-summary="All"></div>
