--- a/Lab31Erik/Lab31Erik/Views/Accounts/LogIn.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Accounts/LogIn.cshtml
@@ -1,8 +1,9 @@
 ﻿@model Lab31Erik.Models.LogInViewModel
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
+
 <h2> Login Page</h2>
 <form method="post">
     <div asp-validation-summary="All"></div>
