--- a/Lab31Erik/Lab31Erik/Views/Products/Delete.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Products/Delete.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
+@{
+    Layout = "_Layout";
+}
+
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
