--- a/Lab31Erik/Lab31Erik/Views/Shared/_Layout.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Shared/_Layout.cshtml
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="~/StyleSheet.css"/>
 </head>
 <body>
+    <div class="nabar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Erik's Store</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a asp-controller="Home" asp-action="Index">Home</a></li>
+                <li class="active"><a asp-controller="Products" asp-action="Index">Products</a></li>
+            </ul>
+        </div>
+
+    </div>
 
     <div>
         @RenderBody()
