--- a/Lab31Erik/Lab31Erik/Views/Accounts/AccessDenied.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Accounts/AccessDenied.cshtml
@@ -1,30 +1,47 @@
-﻿<style>
-    body {
-        width: 100%;
-        margin: 0 auto;
-        text-align: center;
-        background-color: black;
-    }
+﻿<!DOCTYPE html>
 
-    img {
-        margin-top: 200px;
-    }
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>@ViewBag.Title</title>
 
-    .menu h1 {
-        color: darkred;
-    }
+    @*<-------------------------- bootstrap--------------------------->*@
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <style>
+        body {         
+            background-color: black;
+        }
 
-    .menu {
-        width: 50%;
-        background-color: white;
-        margin-top: 50px;
-    }
-</style>
+        img {
+            margin-top: 200px;
+        }
+
+        .menu h1 {
+            color: darkred;
+        }
+
+        .menu {
+            width: 100%;
+            background-color: white;
+            margin-top: 50px;
+        }
+        .container{
+            text-align:center;
+        }
+    </style>
+</head>
+
 <body>
-
-    <img src="~/img/shall-not-pass.gif" />
-    <div class="menu">
-        <h1>ACCESS WAS DENIED!</h1>
-        <a asp-controller="Home" asp-action="Index">Go Back to Home</a>
+   <div class="container">
+        <div class="col-xs-12 col-md-12 col-lg-12">
+            <img src="~/img/shall-not-pass.gif" />
+            <div class="menu">
+                <h1>ACCESS WAS DENIED!</h1>
+                <p>Please LogIn or Register</p>
+                <a asp-controller="Home" asp-action="Index">Go Back to Home</a>
+            </div>
+         </div>
     </div>
 </body>
