--- a/Lab31Erik/Lab31Erik/Views/Accounts/AdminLogIn.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Accounts/AdminLogIn.cshtml
@@ -3,22 +3,25 @@
 @{
     Layout = "_Layout";
 }
+<div class="container">
+    <div class="col-xs-12 col-md-12">
+        <h2>Admin Login Page</h2>
+        <form method="post">
+            <div asp-validation-summary="All"></div>
 
-<h2>Admin Login Page</h2>
-<form method="post">
-    <div asp-validation-summary="All"></div>
+            <label asp-for="Email"></label>
+            <input asp-for="Email" />
+            <br />
+            <label asp-for="Password"></label>
+            <input asp-for="Password" />
+            <br />
 
-    <label asp-for="Email"></label>
-    <input asp-for="Email" />
-    <br />
-    <label asp-for="Password"></label>
-    <input asp-for="Password" />
-    <br />
+            <label asp-for="RememberMe">
+                <input type="checkbox" asp-for="RememberMe" />
+                @Html.DisplayNameFor(m => m.RememberMe)
+            </label>
+            <button type="submit">Login</button>
 
-    <label asp-for="RememberMe">
-        <input type="checkbox" asp-for="RememberMe" />
-        @Html.DisplayNameFor(m => m.RememberMe)
-    </label>
-    <button type="submit">Login</button>
-
-</form>
+        </form>
+    </div>
+</div>
