--- a/Lab31Erik/Lab31Erik/Views/Home/Index.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Home/Index.cshtml
@@ -3,10 +3,18 @@
 @{ 
     Layout = "_Layout";
 }
-<ul>
+
+<div class="container">
+    <div class="col-xs-12 col-md-12 col-lg-12">
+        <h1>Welcome to my store</h1>
+    </div>
+    
+</div>
+
+@*<ul>
     <li><a asp-controller="Products" asp-action="Index">Go to Products</a></li>
     <li><a asp-controller="Accounts" asp-action="Register">Register</a></li>
     <li><a asp-controller="Accounts" asp-action="LogIn">LogIn</a></li>
     <li><a asp-controller="Accounts" asp-action="AdminLogIn">Admin LogIn</a></li>
     <li><a asp-controller="Accounts" asp-action="AdminRegister">Admin Register</a></li>
-</ul>
+</ul>*@
