--- a/Lab31Erik/Lab31Erik/Views/Accounts/Register.cshtml
+++ b/Lab31Erik/Lab31Erik/Views/Accounts/Register.cshtml
@@ -4,23 +4,27 @@
     Layout = "_Layout";
 }
 
-<form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+<div class="container">
+    <div class="col-xs-12 col-md-12">
+        <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
 
-    <div asp-validation-summary="All"></div>
-    <h4>Create Your Account </h4>
+            <div asp-validation-summary="All"></div>
+            <h4>Create Your Account </h4>
 
-    <label asp-for="Email"></label>
-    <input asp-for="Email" />
-    <span asp-validation-for="Email"></span> <br /> <br />
+            <label asp-for="Email"></label>
+            <input asp-for="Email" />
+            <span asp-validation-for="Email"></span> <br /> <br />
 
-    <label asp-for="Password"></label>
-    <input asp-for="Password" />
-    <span asp-validation-for="Password"></span><br /> <br />
+            <label asp-for="Password"></label>
+            <input asp-for="Password" />
+            <span asp-validation-for="Password"></span><br /> <br />
 
-    <label asp-for="ConfirmPassword"></label>
-    <input asp-for="ConfirmPassword" />
-    <span asp-validation-for="ConfirmPassword"></span><br /> <br />
+            <label asp-for="ConfirmPassword"></label>
+            <input asp-for="ConfirmPassword" />
+            <span asp-validation-for="ConfirmPassword"></span><br /> <br />
 
-    <button type="submit">Register</button>
+            <button type="submit">Register</button>
 
-</form>
+        </form>
+     </div>
+</div>
